anfisa-chart/druid/templates/anfisa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anfisa-v6
  labels:
    app: anfisa-v6
    chart: anfisa
  annotations:
      argocd.argoproj.io/sync-options: Validate=false
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anfisa-v6
  template:
    metadata:
      labels:
        app: anfisa-v6
    spec:
      containers:
        - name: anfisa6
          image: "image-registry.openshift-image-registry.svc:5000/asset-forome-dev/anfisa-v6"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          stdin: true
          command:
            - "entrypoint"
          args:
            - "/usr/local/bin/supervisord"
          serviceAccount: default
          volumeMounts:
          - name: data2
            mountPath: /data/
          - name: anfisa-workdir
            mountPath: /anfisa/a-setup/
          - name: anfisa-config
            mountPath: /anfisa/anfisa.json
            subPath: anfisa.json
            ports:
              - name: http
                containerPort: 80
                protocol: TCP       
      volumes:
      - name: data2
        persistentVolumeClaim:
          claimName: s3pvc
      - name: anfisa-workdir
        persistentVolumeClaim:
          claimName: asset-forome-pvc-dev
      - name: anfisa-config
        configMap:
          name: anfisa-v6

      terminationGracePeriodSeconds: 5
