anfisa-chart/druid/templates/anfisa/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: anfisa-v6
spec:
  # hostname: nginx-hello-world.asset-forome-dev-162fa491ef10b14d22843708d94ef0ba-0000.us-south.containers.appdomain.cloud
  port:
    targetPort: anfisa6
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: anfisa-v6
    weight: 100
  wildcardPolicy: None
